Kubernetes/Kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-database-deployment
  labels:
    app: movie-database-query
spec:
  selector:
    matchLabels:
      app: movie-database-query
  template:
    metadata:
      labels:
        app: movie-database-query
    spec:
      serviceAccountName: k8s-pod-identity-sa
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - movie-database-query
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
      containers:
        - name: my-app
          image: 563551423471.dkr.ecr.us-east-1.amazonaws.com/jpmorgan-code-project:v4.1
          ports:
          - containerPort: 80
          resources:
            limits: 
              cpu: "1500m"
            requests:
              cpu: "1500m"
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            initialDelaySeconds: 1
            periodSeconds: 120
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 2
            httpGet:
              path: /readiness
              port: 80
